refactor: simplify assignment responses management
- Consolidate Response CRUD into a single response update operation within AssignmentCrud.
- Replace preview feature with response retrieval.
- Order responses in ReportResponseMapper by Section and Item positions to match template structure.
- Add status assignment update operation based on responses
- Allow partial response saves during assignment completion.